xee-xpath-ast/src/parser/snapshots/xee_xpath_ast__parser__tests__single_slash_by_itself.snap
---
source: xee-xpath-ast/src/parser/mod.rs
expression: "ast::ExprSingle::parse(\"/\")"
---
Ok(Path(PathExpr(
  steps: [
    PrimaryExpr(FunctionCall(FunctionCall(
      name: Name(
        name: "root",
        prefix: None,
        namespace: Some("http://www.w3.org/2005/xpath-functions"),
      ),
      arguments: [
        Path(PathExpr(
          steps: [
            AxisStep(AxisStep(
              axis: Self_,
              node_test: KindTest(Any),
              predicates: [],
            )),
          ],
        )),
      ],
    ))),
  ],
)))
