xee-xpath-ast/src/parser/snapshots/xee_xpath_ast__parser__tests__starts_single_slash.snap
---
source: xee-xpath-ast/src/parser/mod.rs
expression: "ast::ExprSingle::parse(\"/child::foo\")"
---
Ok(Path(PathExpr(
  steps: [
    PrimaryExpr(FunctionCall(FunctionCall(
      name: Name(
        name: "root",
        prefix: None,
        namespace: Some("http://www.w3.org/2005/xpath-functions"),
      ),
      arguments: [
        Path(PathExpr(
          steps: [
            AxisStep(AxisStep(
              axis: Self_,
              node_test: KindTest(Any),
              predicates: [],
            )),
          ],
        )),
      ],
    ))),
    AxisStep(AxisStep(
      axis: Child,
      node_test: NameTest(Name(Name(
        name: "foo",
        prefix: None,
        namespace: None,
      ))),
      predicates: [],
    )),
  ],
)))
