xee-xpath-ast/src/parser/snapshots/xee_xpath_ast__parser__tests__static_function_call.snap
---
source: xee-xpath-ast/src/parser/mod.rs
expression: "ast::ExprSingle::parse(\"my_function()\")"
---
Ok(Path(PathExpr(
  steps: [
    PrimaryExpr(FunctionCall(FunctionCall(
      name: Name(
        name: "my_function",
        prefix: None,
        namespace: Some("http://www.w3.org/2005/xpath-functions"),
      ),
      arguments: [],
    ))),
  ],
)))
