xee-xpath-ast/src/parser/snapshots/xee_xpath_ast__parser__tests__static_function_call_fn_prefix.snap
---
source: xee-xpath-ast/src/parser/mod.rs
expression: "ast::ExprSingle::parse(\"fn:root()\")"
---
Ok(Path(PathExpr(
  steps: [
    PrimaryExpr(FunctionCall(FunctionCall(
      name: Name(
        name: "root",
        prefix: Some("fn"),
        namespace: Some("http://www.w3.org/2005/xpath-functions"),
      ),
      arguments: [],
    ))),
  ],
)))
