xee-xpath-ast/src/parser/snapshots/xee_xpath_ast__parser__tests__static_function_call_placeholder.snap
---
source: xee-xpath-ast/src/parser/mod.rs
expression: "ast::ExprSingle::parse(\"my_function(?, 1)\")"
---
Ok(Path(PathExpr(
  steps: [
    PrimaryExpr(InlineFunction(InlineFunction(
      params: [
        Param(
          name: Name(
            name: "placeholder0",
            prefix: None,
            namespace: None,
          ),
          type_: None,
        ),
      ],
      return_type: None,
      body: Some(Expr([
        Path(PathExpr(
          steps: [
            PrimaryExpr(FunctionCall(FunctionCall(
              name: Name(
                name: "my_function",
                prefix: None,
                namespace: Some("http://www.w3.org/2005/xpath-functions"),
              ),
              arguments: [
                Path(PathExpr(
                  steps: [
                    PrimaryExpr(VarRef(Name(
                      name: "placeholder0",
                      prefix: None,
                      namespace: None,
                    ))),
                  ],
                )),
                Path(PathExpr(
                  steps: [
                    PrimaryExpr(Literal(Integer((Positive, [
                      1,
                    ])))),
                  ],
                )),
              ],
            ))),
          ],
        )),
      ])),
    ))),
  ],
)))
