xee-xpath-ast/src/parser/snapshots/xee_xpath_ast__parser__tests__static_function_call_q.snap
---
source: xee-xpath-ast/src/parser/mod.rs
expression: "ast::ExprSingle::parse(\"Q{http://example.com}something()\")"
---
Ok(Path(PathExpr(
  steps: [
    PrimaryExpr(FunctionCall(FunctionCall(
      name: Name(
        name: "something",
        prefix: None,
        namespace: Some("http://example.com"),
      ),
      arguments: [],
    ))),
  ],
)))
