xee-xpath-ast/src/parser/snapshots/xee_xpath_ast__parser__tests__symbol_as_name_test_with_prefix.snap
---
source: xee-xpath-ast/src/parser/mod.rs
expression: "parse_xpath_simple(\"fn:if\")"
---
Ok(XPath(Expr([
  Path(PathExpr(
    steps: [
      AxisStep(AxisStep(
        axis: Child,
        node_test: NameTest(Name(Name(
          name: "if",
          prefix: Some("fn"),
          namespace: Some("http://www.w3.org/2005/xpath-functions"),
        ))),
        predicates: [],
      )),
    ],
  )),
])))
